# Markov

./: CMakeLists.txt  MarkovChain.cpp  MarkovChain.h  Master.cpp  Master.h  Worker.cpp  Worker.h  main.cpp  resources.h
db-6.2.32/build_unix/: Makefile  config.status  db185_int.h  db_config.h  libtool
